syntax = "proto2";

package org.yupana.hbase;

message SchemaRegistry {
    repeated Table tables = 2;
}

message Table {
    required string name = 1;
    required int64 rowTimeSpan = 2;
    repeated string dimensions = 3;
    repeated Metric metrics = 4;
}

message Metric {
    required string name = 1;
    required int32 tag = 2;
    required string sqlTypeName = 3;
    required int32 group = 4;
}
